Fix to generate certificate for 2014

--- a/certificado/index.html
+++ b/certificado/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Certificado BrazilJS 2013</title>
+	<title>Certificado BrazilJS 2014</title>
 	<link rel="stylesheet" type="text/css" href="jquery-ui-1.10.3.custom/css/ui-lightness/jquery-ui-1.10.3.custom.min.css">
 </head>
 <body>	
@@ -21,9 +21,9 @@
 			logo = new Image(),
 			ass = new Image();
 
-		logo.src = "logo.png";
+		logo.src = "logo.svg";
 		logo.onload = function() {
-			context.drawImage(logo, 20, 10,200,92);
+			context.drawImage(logo, 20, 10,160,160);
 		};	
 
 		context.font = "bold 50px sans-serif";
@@ -34,7 +34,7 @@
 
 		context.font = "bold 20px sans-serif";
 		context.fillText("Certificamos a sua participação na maior conferência JavaScript do universo, realizada nos dias", 20, 383);
-		context.fillText("22 e 23 de Agosto de 2013, na cidade de Porto Alegre, com carga horária de 20 horas.", 20, 410);
+		context.fillText("21 e 22 de Agosto de 2014, na cidade de Porto Alegre, com carga horária de 20 horas.", 20, 410);
 
 		ass.src = "ass.png";
 		ass.onload = function() {
