--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	<!-- Facebook Tags -->
 	<meta property="og:description" content="Em sua quinta edição o maior evento de javascript do universo homenageia os anos 90.">
-	<meta property="og:image" content="http://www.braziljs.com.br/avatar_face.png">
+	<meta property="og:image" content="http://braziljs.com.br/assets/img/avatar_face.png">
 	<meta property="og:site_name" content="BrazilJS Conf">
 	<meta property="og:title" content="BrazilJS Conf 2015">
 	<meta property="og:type" content="website">
