Fixing fb share

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<meta property="og:site_name" content="BrazilJS Conf">
 	<meta property="og:title" content="BrazilJS Conf 2015">
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="http://www.braziljs.com.br">
+	<meta property="og:url" content="http://braziljs.com.br">
 
 	<!-- Twitter tags -->
 	<meta name="twitter:card" content="summary_large_image">
