--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
 	<!-- Facebook Tags -->
 	<meta property="og:description" content="Em sua quinta edição o maior evento de javascript do universo homenageia os anos 90.">
-	<meta property="og:image" content="http://braziljs.com.br/assets/img/avatar_face.png">
+	<meta property="og:image" content="http://www.braziljs.com.br/avatar_face.png">
 	<meta property="og:site_name" content="BrazilJS Conf">
 	<meta property="og:title" content="BrazilJS Conf 2015">
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="http://braziljs.com.br">
+	<meta property="og:url" content="http://www.braziljs.com.br">
 
 	<!-- Twitter tags -->
 	<meta name="twitter:card" content="summary_large_image">
@@ -40,32 +40,107 @@
 	<link rel="shortcut icon" href="http://www.braziljs.com.br/favicon.png" type="image/png"> <!-- link absoluto do favicon -->
 
 	<!-- CSS compilado e minificado -->
-	<link rel="stylesheet" href="assets/css/build/style.min.css">
+	<link rel="stylesheet" href="assets/css/_build/style.min.css">
 
 	<meta charset="UTF-8">
 	<title>BrazilJS Conf 2015</title>
 </head>
 <body>
+<div id="fb-root"></div>
+<script>
+(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));
+</script>
     <div class="wrapper">
-       <div class="block">
-	       	<div class="centered">
-	       		<div class="info-event">
-		       		<h1 class="logo"><img src="assets/img/braziljs.svg"></h1>
+    	<div class="block">
+	    	<div class="centered container">
+	    		<div class="row">
+	    			<div class="col-md-12 info-evento slideDown">
+	    				<h1 class="logo"><img src="assets/img/braziljs.svg"></h1>
+	    				<div class="date stroke align">21 e 22 de Agosto <span class="yellow">Porto alegre,Br</span></div>
+			       		<div class="slogan stroke align">A maior conferência Javascript do Universo</div>
+	    			</div>
+	    			<div class="col-md-12 ticket fadeIn">
+	    				<a class="ticket-button" target="_blank" href="http://www.eventick.com.br/braziljs-2015"><div>Comprar Ticket</div></a>
+	       				<span class="stroke">Não perca tempo, já estamos no 2º lote.</span>
+	    			</div>
+	    			<div class="col-md-12 speakers slideUp">
+	    				<div class="date stroke yellow align">Palestrantes já confirmados para esta edição:</div>
+	    				
+	    				<div class="col-md-2 col-sm-4 speaker andreas">
+	    					<div class="avatar-speaker">
+	    						<img src="assets/img/img-andreas.jpg">
+	    					</div>
+	    					<div class="info-speaker">
+	    						<h2 class="name stroke align">Andreas Gal</h2>
+	    						<span class="stroke yellow">CTO da Mozilla</span>
+	    					</div>
+	    				</div>
 
-		       		<div class="edition yellow">5º Edição  -  Lembranças dos anos 90</div>
-		       		<div class="slogan stroke align">A maior conferência Javascript do Universo</div>
-		       		<div class="date stroke align">21 e 22 de Agosto <span class="yellow">Porto alegre,Br</span></div>
-	       		</div>
-	       		<div class="ticket">
-	       			<a class="ticket-button" href="http://www.eventick.com.br/braziljs-2015"><div>Comprar Ticket</div></a>
-	       			<span class="stroke">Cada ingresso vendido ajudará o <a class="red" href="http://leokz.com/campanha/" target="_blank">LEOKZ</a></span>
-	       		</div>
-	       	</div>
-       </div>
+	    				<div class="col-md-2 col-sm-4 speaker eric">
+	    					<div class="avatar-speaker">
+	    						<img src="assets/img/img-eric.jpg">
+	    					</div>
+	    					<div class="info-speaker">
+	    						<h2 class="name stroke align">Eric Schoffstall</h2>
+	    						<span class="stroke yellow">Criador do Gulp</span>
+	    					</div>
+	    				</div>
+
+	    				<div class="col-md-4 col-sm-4 legend-speaker brendan floating">
+	    					<div class="avatar-speaker">
+	    						<img src="assets/img/img-brendan.jpg">
+	    					</div>
+	    					<div class="info-speaker">
+	    						<h2 class="name stroke yellow align">Brendan Eich</h2>
+	    						<span class="stroke">Criador do Javascript</span>
+	    					</div>
+	    				</div>
+
+	    				<div class="col-md-2 col-sm-6 speaker laurie">
+	    					<div class="avatar-speaker">
+	    						<img src="assets/img/img-laurie.jpg">
+	    					</div>
+	    					<div class="info-speaker">
+	    						<h2 class="name stroke align">Laurie Voss</h2>
+	    						<span class="stroke yellow">CTO do npm</span>
+	    					</div>
+	    				</div>
+
+	    				<div class="col-md-2 col-sm-6 speaker sebastian">
+	    					<div class="avatar-speaker">
+	    						<img src="assets/img/img-sebastian.jpg">
+	    					</div>
+	    					<div class="info-speaker">
+	    						<h2 class="name stroke align">Sebastian McKenzie</h2>
+	    						<span class="stroke yellow">Criador do BabelJS</span>
+	    					</div>
+	    				</div>
+
+	    			</div>
+	    			<div class="col-md-12 share">
+	    				<span>
+	    					<div class="fb-share-button" data-href="http://braziljs.com.br/" data-layout="button_count"></div>
+	    				</span>
+	    				<span class="twitter">
+	    					<a href="https://twitter.com/share" class="twitter-share-button" data-text="BrazilJS Conf - A maior conferência JavaScript do universo!" data-via="braziljs" data-hashtags="braziljs">Tweet</a> 
+	    					<script>
+	    					!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+	    					</script>
+	    				</span>
+	    			</div>
+	    		</div>
+	    	</div>
+    	</div>
     </div>
 
 	<!-- Scripts minificados e concatenados -->
-	<script src="assets/js/build/all.min.js"></script>
+	<script src="assets/js/_build/all.min.js"></script>
 
 	<!-- Google Analytics: Altere UA-XXXXX-X pelo ID do seu site. -->
 	<script type="text/javascript">
