--- a/index.html
+++ b/index.html
@@ -66,12 +66,20 @@
 			       		<div class="slogan stroke align">A maior conferência Javascript do Universo</div>
 	    			</div>
 	    			<div class="col-md-12 ticket fadeIn">
-	    				<a class="ticket-button" target="_blank" href="http://www.eventick.com.br/braziljs-2015"><div>Comprar Ticket</div></a>
-	       				<span class="stroke">Não perca tempo, já estamos no 2º lote.</span>
+	    				<div class="row">
+	    					<div class="col-md-6">
+			    				<a class="ticket-button" target="_blank" href="http://www.eventick.com.br/braziljs-2015"><div>Comprar Ticket</div></a>
+			       				<span class="stroke">Não perca tempo, já estamos no 2º lote.</span>
+		       				</div>
+		       				<div class="col-md-6">
+			    				<a class="ticket-button c4p-button" target="_blank" href="https://docs.google.com/forms/d/1-XpwAO7eFfzt4Fma4ciJRJFxEA3fFdNz2lC8-YwNfmU/viewform?embedded=true"><div>Enviar Talk</div></a>
+			       				<span class="stroke">Participe você também do nosso C4P.</span>
+		       				</div>
+	       				</div>
 	    			</div>
 	    			<div class="col-md-12 speakers slideUp">
 	    				<div class="date stroke yellow align">Palestrantes já confirmados para esta edição:</div>
-	    				
+
 	    				<div class="col-md-2 col-sm-4 speaker andreas">
 	    					<div class="avatar-speaker">
 	    						<img src="assets/img/img-andreas.jpg">
@@ -128,7 +136,7 @@
 	    					<div class="fb-share-button" data-href="http://braziljs.com.br/" data-layout="button_count"></div>
 	    				</span>
 	    				<span class="twitter">
-	    					<a href="https://twitter.com/share" class="twitter-share-button" data-text="BrazilJS Conf - A maior conferência JavaScript do universo!" data-via="braziljs" data-hashtags="braziljs">Tweet</a> 
+	    					<a href="https://twitter.com/share" class="twitter-share-button" data-text="BrazilJS Conf - A maior conferência JavaScript do universo!" data-via="braziljs" data-hashtags="braziljs">Tweet</a>
 	    					<script>
 	    					!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
 	    					</script>
