code of conduct

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 			       				<span class="stroke">Não perca tempo, já estamos no 2º lote.</span>
 		       				</div>
 		       				<div class="col-md-6">
-			    				<a class="ticket-button c4p-button" target="_blank" href="https://docs.google.com/forms/d/1-XpwAO7eFfzt4Fma4ciJRJFxEA3fFdNz2lC8-YwNfmU/viewform?embedded=true"><div>Enviar Talk</div></a>
-			       				<span class="stroke">Participe você também do nosso C4P.</span>
+			    				<a class="ticket-button c4p-button" target="_blank" href="http://pt-br.confcodeofconduct.com/"><div>Código de Conduta</div></a>
+			       				<span class="stroke">Faça e proporcione uma boa conferência. Siga nosso código de conduta</span>
 		       				</div>
 	       				</div>
 	    			</div>
