--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
 
     <!-- Facebook Tags -->
     <meta property="og:description" content="Em sua quinta edição o Braziljs homenageia os anos 90 comemorando os 20 anos do javascript.">
-    <meta property="og:image" content="http://www.braziljs.com.br/images/avatar-share.jpg">
+    <meta property="og:image" content="http://braziljs.com.br/images/avatar-share.jpg">
     <meta property="og:site_name" content="BrazilJS Conf 2015">
     <meta property="og:title" content="BrazilJS Conf 2015">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="http://www.braziljs.com.br">
+    <meta property="og:url" content="http://braziljs.com.br">
 
     <!-- Twitter tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="http://www.braziljs.com.br">
+    <meta name="twitter:site" content="http://braziljs.com.br">
     <meta name="twitter:creator" content="@italowaxmanr">
     <meta name="twitter:title" content="BrazilJS Conf 2015">
     <meta name="twitter:description" content="Em sua quinta edição o Braziljs homenageia os anos 90 comemorando os 20 anos do javascript.">
-    <meta name="twitter:image" content="http://www.braziljs.com.br/images/avatar-share.jpg">
+    <meta name="twitter:image" content="http://braziljs.com.br/images/avatar-share.jpg">
 
     <!-- Gplus tags -->
     <meta itemprop="name" content="BrazilJS Conf 2015">
     <meta itemprop="description" content="Em sua quinta edição o Braziljs homenageia os anos 90 comemorando os 20 anos do javascript.">
-    <meta itemprop="image" content="http://www.braziljs.com.br/images/avatar-share.jpg">
+    <meta itemprop="image" content="http://braziljs.com.br/images/avatar-share.jpg">
 
     <!-- Humans -->
     <link rel="author" href="humans.txt" />
