better facebook meta

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
     <!-- Facebook Tags -->
-    <meta property="og:description" content="Em sua quinta edição o Braziljs homenageia os anos 90 comemorando os 20 anos do javascript.">
+    <meta property="og:description" content="Em sua 5º edição, a BrazilJS Conf faz uma homenagem aos anos 90, comemorando os 20 anos do JavaScript. Venha fazer parte da maior conferência JavaScript do universo!">
     <meta property="og:image" content="http://braziljs.com.br/images/avatar-share.jpg">
     <meta property="og:site_name" content="BrazilJS Conf 2015">
     <meta property="og:title" content="BrazilJS Conf 2015">
@@ -21,12 +21,12 @@
     <meta name="twitter:site" content="http://braziljs.com.br">
     <meta name="twitter:creator" content="@italowaxmanr">
     <meta name="twitter:title" content="BrazilJS Conf 2015">
-    <meta name="twitter:description" content="Em sua quinta edição o Braziljs homenageia os anos 90 comemorando os 20 anos do javascript.">
+    <meta name="twitter:description" content="Em sua 5º edição, a BrazilJS Conf faz uma homenagem aos anos 90, comemorando os 20 anos do JavaScript. Venha fazer parte da maior conferência JavaScript do universo!">
     <meta name="twitter:image" content="http://braziljs.com.br/images/avatar-share.jpg">
 
     <!-- Gplus tags -->
     <meta itemprop="name" content="BrazilJS Conf 2015">
-    <meta itemprop="description" content="Em sua quinta edição o Braziljs homenageia os anos 90 comemorando os 20 anos do javascript.">
+    <meta itemprop="description" content="Em sua 5º edição, a BrazilJS Conf faz uma homenagem aos anos 90, comemorando os 20 anos do JavaScript. Venha fazer parte da maior conferência JavaScript do universo!">
     <meta itemprop="image" content="http://braziljs.com.br/images/avatar-share.jpg">
 
     <!-- Humans -->
@@ -36,8 +36,8 @@
     <link rel="shortcut icon" href="/images/favicon.png" type="image/png">
 
     <!-- Core Meta Data -->
-    <meta name="description" content="Em sua quinta edição o Braziljs homenageia os anos 90 comemorando os 20 anos do javascript.">
-    <meta name="author" content="@italowaxman">
+    <meta name="description" content="Em sua 5º edição, a BrazilJS Conf faz uma homenagem aos anos 90, comemorando os 20 anos do JavaScript. Venha fazer parte da maior conferência JavaScript do universo!">
+    <meta name="author" content="@braziljs">
 
     <!-- CSS compilado e minificado / Google Fonts-->
     <link href='http://fonts.googleapis.com/css?family=Lato:300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
