small fix and GA

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 									<div class="info-speaker-highlight">
 										<h3> Christian Heilmann </h3>
 										<h4 class="yellow">HTML5/Open Web Evangelist at Microsoft</h4>
-										<p>Chris Heilmann tem dedicado muito do seu tempo a fazer a web melhor. Originalmente vindo de um background de jornalismo de rádio, ele construiu seu primeiro site do zero lá por 1997 e passou os anos seguintes trabalhando em vários sites de grande porte. Ele então passou alguns anos no Yahoo, depois trabalhou na Mozilla. Chris escreveu 2 livros sobre desenvolvimento web e contribuiu para 8, além de escrever muitos artigos e centenas de blog posts. Ele está atualmente trabalhando no time do Microsoft Edge.</p>
+										<p>Chris Heilmann tem dedicado muito do seu tempo a fazer a web melhor. Originalmente vindo de um background de jornalismo de rádio, ele construiu seu primeiro site do zero lá por 1997 e passou os anos seguintes trabalhando em vários sites de grande porte. Ele então passou alguns anos no Yahoo, depois trabalhou na Mozilla. Ele está atualmente trabalhando no time do Microsoft Edge.</p>
 										<div class="social-speaker">
 											<a href="https://twitter.com/codepo8" class="item-social-speaker" title="Twitter"><img src="/images/twitter.svg" alt="icon twitter"></a>
 											<a href="https://github.com/codepo8" class="item-social-speaker" title="Github"><img src="/images/github.svg" alt="icon github"></a>
@@ -1377,7 +1377,7 @@
 
 <!-- Google Analytics: Altere UA-XXXXX-X pelo ID do seu site. -->
 	<script>
-		var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
+		var _gaq=[['_setAccount','UA-32119524-1'],['_trackPageview']];
 		(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
 		g.src='//www.google-analytics.com/ga.js';
 		s.parentNode.insertBefore(g,s)}(document,'script'));
