small fiz and, hum, a cool easter egg. Go find it

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 									<div class="info-speaker-highlight">
 										<h3> Andreas Gal </h3>
 										<h4 class="yellow">Empreendedor, Tecnólogo, Ex-CTO da Mozilla</h4>
-										<p>Andreas é empreendedor e tecnólogo com uma paixão para resolver problemas difíceis com grande impacto. Como o ex-CTO da Mozilla ele trabalhou por muitos anos com a Web e com as tecnologias que fizeram a Web ser o que é hoje.</p>
+										<p>Andreas é empreendedor e tecnólogo com uma paixão por resolver problemas difíceis com grande impacto. Como o ex-CTO da Mozilla ele trabalhou por muitos anos com a Web e com as tecnologias que fizeram a Web ser o que é hoje.</p>
 										<div class="social-speaker">
 											<a href="https://twitter.com/andreasgal" class="item-social-speaker" title="Twitter"><img src="/images/twitter.svg" alt="icon twitter"></a>
 											<a href="https://github.com/andreasgal" class="item-social-speaker" title="Github"><img src="/images/github.svg" alt="icon github"></a>
@@ -362,7 +362,7 @@
 									<div class="info-speaker-highlight">
 										<h3> Julián Duque </h3>
 										<h4 class="yellow">NodeSource</h4>
-										<p>Desenvolvedor e professr por paixão, engenheiro na NodeSource, contribuidor e evangelista io.js. Organizador do MedellinJS e da JSConf Colombia.</p>
+										<p>Desenvolvedor e professor por paixão, engenheiro na NodeSource, contribuidor e evangelista io.js. Organizador do MedellinJS e da JSConf Colombia.</p>
 										<div class="social-speaker">
 											<a href="https://twitter.com/julian_duque" class="item-social-speaker" title="Twitter"><img src="/images/twitter.svg" alt="icon twitter"></a>
 											<a href="https://github.com/julianduque" class="item-social-speaker" title="Github"><img src="/images/github.svg" alt="icon github"></a>
@@ -425,7 +425,7 @@
 									<div class="info-speaker-highlight">
 										<h3> Tania Gonzales </h3>
 										<h4 class="yellow">ThoughtWorks</h4>
-										<p>Tania Gonzales é desenvolvedora de software pela ThoughtWorks Brazil desde 2013, e atua como profissional de TI a 6 anos. Apaixonada por inovação e boas práticas.</p>
+										<p>Tania Gonzales é desenvolvedora de software pela ThoughtWorks Brazil desde 2013, e atua como profissional de TI há 6 anos. Apaixonada por inovação e boas práticas.</p>
 										<div class="social-speaker">
 											<a href="https://twitter.com/taniadgv" class="item-social-speaker" title="Twitter"><img src="/images/twitter.svg" alt="icon twitter"></a>
 											<a href="https://github.com/taniadgv/" class="item-social-speaker" title="Github"><img src="/images/github.svg" alt="icon github"></a>
@@ -446,7 +446,7 @@
 									<div class="info-speaker-highlight">
 										<h3> Diogo Lucas </h3>
 										<h4 class="yellow">AGCO</h4>
-										<p>Desenvolvedor, arquitéto, professor e entusiasta tecnológico. Diogo realmente acredita que a vida é muito curta para beber cerveja ruim, criar produtos ruins ou deixar pessoas na zona de conforto.</p>
+										<p>Desenvolvedor, arquiteto, professor e entusiasta tecnológico. Diogo realmente acredita que a vida é muito curta para beber cerveja ruim, criar produtos ruins ou deixar pessoas na zona de conforto.</p>
 										<div class="social-speaker">
 											<a href="https://twitter.com/diogoclucas" class="item-social-speaker" title="Twitter"><img src="/images/twitter.svg" alt="icon twitter"></a>
 											<a href="https://github.com/dclucas" class="item-social-speaker" title="Github"><img src="/images/github.svg" alt="icon github"></a>
@@ -509,7 +509,7 @@
 									<div class="info-speaker-highlight">
 										<h3> Nicolas Bevacqua </h3>
 										<h4 class="yellow">Pony Foo</h4>
-										<p>Nico é um hacker entusiasta JavaScript que mora em Buenos Aires, Argentina. Quando ele não está hackeando em projetos freelance, ou contribuindo com a comunidade open-source, Nico dedica o seu tempo para comunidades locais como a NodeSchool e Beer.js, e escrevendo para Pony Foo; Ele também publicou um livro, chanado JavaScript Application Design.</p>
+										<p>Nico é um hacker entusiasta JavaScript que mora em Buenos Aires, Argentina. Quando ele não está hackeando em projetos freelance, ou contribuindo com a comunidade open-source, Nico dedica o seu tempo para comunidades locais como a NodeSchool e Beer.js, e escrevendo para Pony Foo; Ele também publicou um livro chamado JavaScript Application Design.</p>
 										<div class="social-speaker">
 											<a href="https://twitter.com/nzgb" class="item-social-speaker" title="Twitter"><img src="/images/twitter.svg" alt="icon twitter"></a>
 											<a href="https://github.com/bevacqua" class="item-social-speaker" title="Github"><img src="/images/github.svg" alt="icon github"></a>
@@ -906,7 +906,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <h2>Onde Se hospedar?</h2>
-                <p>Essas são nossas dicas de hospedagem para melhor a sua estadia em Porto Alegre.</p>
+                <p>Essas são nossas dicas de hospedagem para melhor a sua melhor estadia em Porto Alegre.</p>
             </div>
         </div>
         <div class="row gameboy-trigger">
@@ -1007,7 +1007,22 @@
 
         <section id="ticket" class="ticket">
     <div class="container">
-        <div class="gameboy hidden-xs"><img src="/images/gameboy.png" alt="gameboy"></div>
+        <div class="gameboy hidden-xs">
+            <img src="/images/gameboy.png" alt="gameboy">
+            <div id="konami-code-container">
+                <div class='screen'>
+                    <input type='text' class='keys' maxlen="11" readonly>
+                </div>
+                <div class='btn up' data-btn-name="up" title="up"></div>
+                <div class='btn left' data-btn-name="left" title="left"></div>
+                <div class='btn down' data-btn-name="down" title="down"></div>
+                <div class='btn right' data-btn-name="right" title="right"></div>
+                <div class='btn A' data-btn-name="A" title="A"></div>
+                <div class='btn B' data-btn-name="B" title="B"></div>
+                <div class='btn select' data-btn-name="select" title="Select"></div>
+                <div class='btn start' data-btn-name="start" title="Start"></div>
+            </div>
+        </div>
         <div class="col-md-8 col-md-offset-4 col-sm-12">
             <h2>Garanta seu ticket</h2>
             <p>Garanta já o seu ticket para a maior conferência de JavaScript do universo. Esse ano comemoraremos os 20 anos de JavaScript relembrando a década de 90. </p>
