prevent default on speaker click. Other small fix

--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
 									<div class="info-speaker-highlight">
 										<h3> Fernando Miçalli </h3>
 										<h4 class="yellow">UOL</h4>
-										<p>Formado em Ciência da Computação, trabalha há 15 anos no UOL e atuou em diversas áreas da empresa como desenvolvedor de Front e Back End, Líder Técnico, Scrum Master e Gerente de Projetos. Participou da criação e evolução de produtos como Home Page do UOL, Busca, Rádio UOL, Bate-papo, CMS e Placar UOL</p>
+										<p>Desenvolvedor JavaScript desde 1999, colocou em produção sua primeira aplicação de alta performance usando Node.js já em 2011, antes da plataforma ter o reconhecimento que possui hoje. Trabalha há 15 anos no UOL e atuou na criação e evolução de produtos como Home Page do UOL, Busca, Rádio UOL, Bate-papo, CMS e Placar UOL.</p>
 										<div class="social-speaker">
 											<a href="" class="item-social-speaker" title="Twitter"><img src="/images/twitter.svg" alt="icon twitter"></a>
 											<a href="https://github.com/fermads/" class="item-social-speaker" title="Github"><img src="/images/github.svg" alt="icon github"></a>
