fixed some issues with the last integration

--- a/index.html
+++ b/index.html
@@ -123,34 +123,15 @@
                     <a class="button button-ticket" target="_blank" href="http://www.eventick.com.br/braziljs-2015" title="Comprar Ticket">
                         <div>
                             <h4>Comprar Ticket</h4>
-                            <span class="hidden-xs">Lote Eich</span>
+                            <span class="hidden-xs">Lote Eich - R$ 240,00</span>
                         </div>
                     </a>
                 </div>
                 <div class="col-sm-6">
-                    <a class="button button-patrocinio" target="_blank" href="mailto:jayalemao@gmail.com;felipenmoura@gmail.com?subject=Patrocínio BrazilJS 2015" title="Seja um Patrocinador">
-                        <div>
-                            <h4>Seja um Patrocinador</h4>
-                            <span class="hidden-xs">Patrocine a maior conferência JS do universo</span>
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </div>
-
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-6">
-                    <a href="#diversity-scholarship" class="button button-diversity">
-                        <div>
-                            <h4>Diversity Scholarship</h4>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-sm-6">
-                    <a href="http://pt-br.confcodeofconduct.com/" class="button button-coc" target="_blank">
+                    <a class="button button-patrocinio" target="_blank" href="http://pt-br.confcodeofconduct.com/" title="Código de Conduta">
                         <div>
                             <h4>Código de Conduta</h4>
+                            <span class="hidden-xs">Garanta um ambiente seguro para todos</span>
                         </div>
                     </a>
                 </div>
@@ -1050,7 +1031,7 @@
             <a class="button button-ticket" target="_blank" href="http://www.eventick.com.br/braziljs-2015">
                 <div>
                     <h4 class="red">Comprar Ticket</h4>
-                    <span class="hidden-xs">Lote Eich</span>
+                    <span class="hidden-xs">Lote Eich - R$ 240,00</span>
                 </div>
             </a>
         </div>
