--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <link href='http://fonts.googleapis.com/css?family=Lato:300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/css/style.min.css">
 
-    <title>My awesome static website</title>
+    <title>BrazilJS 2015</title>
 </head>
 <body> 
     <div class="wrapper">
