--- a/index.html
+++ b/index.html
@@ -210,16 +210,16 @@
 							<div class="speaker-container speaker-3">
 								<div class="col-sm-6 speaker-image">
 									<div class="avatar-speaker-highlight">
-										<img src="/images/speakers/ju-goncalves.png" alt="Ju Gonçalves" title="Ju Gonçalves">
+										<img src="/images/speakers/ju-goncalves.png" alt="Ju Gonçalves" title="Ju Gonçalves: @junspector">
 									</div>
 								</div>
 								<div class="col-sm-5 speaker-data">
 									<div class="info-speaker-highlight">
 										<h3> Ju Gonçalves </h3>
-										<h4 class="yellow"></h4>
+										<h4 class="yellow">@junspector</h4>
 										<p>Ju Gonçaves é uma cientista em tempo integral, sendo não somente Mestre Pokémon como Mestre em Ciência da Computação. Tem artigos citados no mundo inteiro, é integrante da comunidade JavaScript, embora dedique parte do seu tempo à Programação Funcional e a compilar diversas linguagens para rodá-las no browser.</p>
 										<div class="social-speaker">
-											<a href="https://twitter.com/cyberglot" class="item-social-speaker" title="Twitter"><img src="/images/twitter.svg" alt="icon twitter"></a>
+											<a href="https://twitter.com/junspector" class="item-social-speaker" title="Twitter"><img src="/images/twitter.svg" alt="icon twitter"></a>
 											<a href="https://github.com/jugoncalves" class="item-social-speaker" title="Github"><img src="/images/github.svg" alt="icon github"></a>
 										</div>
 									</div>
@@ -1335,6 +1335,18 @@
                             <div class="vert-centering">
                                 <a href="https://www.digitalocean.com/">
                                     <img src="/images/logo-sponsor-digitalocean.png" alt="Digital Ocean">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                             
+                <div class="col-md-3 col-sm-3 col-xs-6">
+                    <div class="sponsor">
+                        <div class="vert-container">
+                            <div class="vert-centering">
+                                <a href="https://www.treinaweb.com.br/">
+                                    <img src="/images/logo-sponsor-treinaweb.png" alt="TreinaWeb">
                                 </a>
                             </div>
                         </div>
