diversity is back

--- a/index.html
+++ b/index.html
@@ -1647,6 +1647,57 @@
     </div>
 </section>
 
+        <section id="diversity-scholarship" class="diversity">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12"><h2>Diversity Scholarship</h2></div>
+            <div class="col-sm-6">
+                <p>Em missão conjunta do <strong>BrazilJS</strong> e a <a href="http://bocoup.com/pt-br"><strong>Bocoup</strong></a>, queremos prover suporte para acesso universal à informação, além das ferramentas para compreender e transformar esse acesso.</p>
+
+                <p>Estamos constantemente buscando novas formas para fazer as nossas comunidades mais abrangentes e mais inclusivas. Com esse fim, estamos felizes em anunciar que a Bocoup vai disponibilizar pelo menos <strong>duas bolsas de estudo para diversidade para partiparem do BrazilJS 2015!</strong> A bolsa cobre não apenas o ingresso, mas também acomodação (hotel) e viagem para Porto Alegre, se necessárias.</p>
+
+                <p>No espírito de ampliar a nossa comunidade, queremos estimular as pessoas de comunidades sub-representadas na nossa área a aplicarem. Em particular nós adoraríamos ver o BrazilJS se tornar mais diverso etnicamente e por gênero, assim como um ambiente bem vindo àqueles que se identificam como membros de uma comunidade sub-representada. Isso inclui, mas não se limita a, pessoas de cores de pele diferentes, mulheres, transgêneros e pessoas de diferentes orientações sexuais. Nós esperamos que esse programa de bolsa permita que você participe com a gente e contribua com o nosso diálogo.</p>
+
+                <p><strong>Se você souber de qualquer pessoa que possa se beneficiar dessa bolsa, compartilhe com essa pessoa.</strong></p>
+            </div>
+            <div class="col-sm-6">
+
+                <h3>Detalhes da bolsa</h3>
+
+                <p>Cada bolsa de estudos cobre o seguinte para cada pessoa:</p>
+                <ul>
+                    <li>Um <strong>ingresso</strong> para o BrazilJS 2015: um ingresso completo para participar de todas as atividades regulares do conferência.</li>
+                    <li><strong>Acomodação</strong>: em Hotel para aqueles que não moram na região metropolitana de Porto Alegre por toda a duração da conferência, nos dias 21 e 22 de Agosto.</li>
+                    <li><strong>Transporte</strong>: vamos cobrir a passagem aérea em até cerca de R$ 650,00 para viagem de ida e volta até Porto Alegre para aqueles que precisarem.</li>
+                </ul>
+
+                <p>Custos por dia de alimentação e transporte local na cidade durante a conferência não estão incluídos.</p>
+
+                <h3>Patrocine uma bolsa</h3>
+
+                <p>Nós adoraríamos oferecer mais bolsas e nós podemos com a sua ajuda. Se você ou a sua empresa tiver interesse em patrocinar uma ou mais bolsas, <a href="mailto:jayalemao@gmail.com">entre em contato com a organização do evento</a> para saber mais.</p>
+            </div>
+
+            <div class="col-xs-12">
+                <h3>Como aplicar:</h3>
+
+                <p>Para aplicar para uma bolsa de estudos, <a href="https://bocoup.submittable.com/submit/44494">preencha esse formulário</a> e conte-nos um pouco sobre você. O formulário vai estar disponível até 22 de Julho de 2015 e nós vamos selecionar pelo menos duas pessoas que vamos contactar nas semanas seguintes, antes de Agosto. Se tiver qualquer dúvida, entre em contato com a organização do evento.</p>
+
+                <div>
+                    <a class="button button-ticket button-scholarship" target="_blank" href="https://bocoup.submittable.com/submit/44494">
+                        <div>
+                            <h4 class="red">Inscreva-se</h4>
+                            <span class="hidden-xs">Basta preencher o formulário</span>
+                        </div>
+                    </a>
+                    <a href="http://bocoup.com/pt-br/" class="bocoup"><img src="images/bocoup.png" alt="Bocoup"></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
         <section class="curadores">
     <div class="container">
         <div class="row">
