--- a/index.html
+++ b/index.html
@@ -1083,7 +1083,7 @@
                         </div>
                         <div class="item-sessions item-dia-1">
                             <span>12:00</span>
-                            <h3>Coffee-Break</h3>
+                            <h3>Almoço</h3>
                         </div>
                         <div class="item-sessions item-sessions-speaker item-dia-1" href="#">
                             <span>13:30</span>
