Fix speaker twitter url

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 										<h4 class="yellow">Criador do Gulp</h4>
 										<p>Eric Schoffstall (aka Contra) é co-founder da Fractal, atualmente morando em San Francisco. Quando ele não está trabalhando em um dos seus 210 projetos open source, ele esta normalmente andando de skate ou escalando montanhas ao redor do mundo.</p>
 										<div class="social-speaker">
-											<a href="https://twitter.com/contra-hacks" class="item-social-speaker" title="Twitter"><img src="/images/twitter.svg" alt="icon twitter"></a>
+											<a href="https://twitter.com/contrahacks" class="item-social-speaker" title="Twitter"><img src="/images/twitter.svg" alt="icon twitter"></a>
 											<a href="https://github.com/contra" class="item-social-speaker" title="Github"><img src="/images/github.svg" alt="icon github"></a>
 										</div>
 									</div>
