Added the description to my talk JS @ Spotify

--- a/index.html
+++ b/index.html
@@ -1083,10 +1083,11 @@
                         </div>
                         <div class="item-sessions item-sessions-speaker item-dia-1" href="#">
                             <span>11:30</span>
-                            <h3>Felipe Ribeiro</h3>
+                            <h3>Felipe Ribeiro - <span>JavaScript @ Spotify</span></h3>
                             <div class="hidden-xs">
                                 <img src="/images/speakers/list/avatar-felipe.jpg" alt="felipe ribeiro">
                             </div>
+                            <p>Conheça um pouco sobre a arquitetura do cliente Spotify para desktop baseado em tecnologias Web. Como organizamos nossas equipes, war stories e lições aprendidas no processo de desenvolvimento. Esta não é uma palestra sobre um framework ou ferramenta específica, mas sobre como trabalhamos com JavaScript em um ambiente um pouco diferente do convencional, a experiência que adquirimos e algumas ideias que podem ser úteis em outros contextos.</p>
                         </div>
                         <div class="item-sessions item-dia-1">
                             <span>12:00</span>
