--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                 <li class="item-main-menu"><a href="#location">Local</a></li>
                                 <li class="item-main-menu"><a href="#sessions">Programação</a></li>
                                 <li class="item-main-menu"><a href="#workshop">Workshops</a></li>
-                                <li class="item-main-menu"><a href="#manifesto">Manisfesto</a></li>
+                                <li class="item-main-menu"><a href="#manifesto">Manifesto</a></li>
                                 <li class="item-main-menu"><a href="#sponsors">Patrocínio</a></li>
                             </ul>
                         </nav>
