--- a/index.html
+++ b/index.html
@@ -1232,7 +1232,7 @@
                                 <img src="/images/speakers/list/avatar-jacob.jpg" alt="jacob page">
                             </div>
                             <p>
-                                <!-- todo AQUI here -->
+                                Callbacks? Promises? EventEmitters? setInterval? With Functional Reactive Programming, you can merge all the async things into one unified interface, streams of events. Then take these streams and elegantly transform and combine them with operations like map, filter, combine, merge, and throttle.
                             </p>
                         </div>
                         <div class="item-sessions item-dia-1">
