--- a/index.html
+++ b/index.html
@@ -1573,7 +1573,7 @@
             <a class="button button-ticket" target="_blank" href="http://www.eventick.com.br/braziljs-2015">
                 <div>
                     <h4 class="red">Comprar Ticket</h4>
-                    <span class="hidden-xs">Lote Eich - R$ 240,00</span>
+                    <span class="hidden-xs">Late Bird - R$ 300,00</span>
                 </div>
             </a>
         </div>
